--- a/money.html
+++ b/money.html
@@ -25,6 +25,128 @@
     <div id="score">Score is zero.</div>
     <p>Click for help.</p>
     <div id="help">Help report</div>
+    <div class="container">
+        <div class="image-row d-flex justify-content-center">
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+        </div>
+        <div class="image-row d-flex justify-content-center">
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+        </div>
+        <div class="image-row d-flex justify-content-center">
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+        </div>
+        <div class="image-row d-flex justify-content-center">
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+        </div>
+        <div class="image-row d-flex justify-content-center">
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+        </div>
+        <div class="image-row d-flex justify-content-center">
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+        </div>
+        <div class="image-row d-flex justify-content-center">
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+            <div>
+                <img src="building.jpg" alt="building" height="150" width="150">
+            </div>
+        </div>
+    </div>
+    
 </body>
 
 </html>
