--- a/money.html
+++ b/money.html
@@ -20,8 +20,7 @@
     <h1>Find the coins by Shivani Kandikonda</h1>
     <div>Click on the locations to find
         coins, beware the monster</div>
-    <div id="locations">Click on the locations to find
-        coins, beware the monster</div>
+    <div id="locations">Number of locations checked is zero.</div>
     <div id="score">Score is zero.</div>
     <p>Click for help.</p>
     <div id="help">Help report</div>
