--- a/divlist.html
+++ b/divlist.html
@@ -54,6 +54,7 @@
     <button class="button" onclick="makeNewDiv()"><b>Add end</b></button>
     <button type="button" class="button" onclick="addFront()"><b>Add front</b></button>
 	<button type="button" class="button" onclick="remove()"><b>Remove</b></button>
+    <button type="button" class="button" onclick="swap()"><b>Swap</b></button>
 </body>
 <script>
     function makeNewDiv() {
@@ -85,6 +86,19 @@
 			}
 		}
     }
+    function swap(){
+        let divlistItems = document.getElementsByClassName("divlist");
+        let container = document.getElementById("target");
+        let element1 = Math.floor(Math.random() * divlistItems.length);
+		let element2 = Math.floor(Math.random() * divlistItems.length);
+        let innerText1 = document.getElementsByClassName("divlist")[element1];
+		let innerText2 = document.getElementsByClassName("divlist")[element2];
+        if(divlistItems.length > 1){
+            let temp = innerText1.innerHTML;
+            innerText1.innerHTML = innerText2.innerHTML;
+            innerText2.innerHTML = temp;
+        }
+        
+    }
 </script>
-
 </html>
