--- a/precision.html
+++ b/precision.html
@@ -27,10 +27,11 @@
             console.log(stopTime);
         }
         function startTime() {
+            let countdown = Math.floor(Math.random() * 9) + 2
             for (let i = 0; i < 5; i++) {
                 setTimeout(function () {
                     document.getElementById('countdown').innerHTML = i;
-                }, (4 - i) * 1000);
+                }, (countdown - i) * 1000);
             }
 
             setTimeout(function () {
